fixed spacing in cards and headers mobile animation

--- a/app/components/DoctorCards/DoctorCards.module.css
+++ b/app/components/DoctorCards/DoctorCards.module.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
 
 .card {
-    width: 275px;
+    width: 325px;
     line-height: 1.5;
     border-radius: 12px;
     padding: 16px;
