--- a/app/components/Header/Header.module.css
+++ b/app/components/Header/Header.module.css
@@ -129,7 +129,9 @@
     width: 100%;
     height: 100vh;
     z-index: 9;
-    background: rgba(255, 255, 255, 0.95);
+    background: rgba(255, 255, 255, 0.6);  
+    backdrop-filter: blur(10px);          
+    -webkit-backdrop-filter: blur(10px);   
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -140,7 +142,20 @@
 
 .mobileNavOpen {
     transform: translateY(0);
+    opacity: 1;
 }
+
+@keyframes slideFadeIn {
+    from {
+      opacity: 0;
+      transform: translateY(-20px);
+    }
+    to {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
+  
 
 .mobileNav a {
     padding: 12px 20px;
@@ -153,10 +168,11 @@
     transition: transform 0.3s ease, opacity 0.3s ease;
     opacity: 0;
     transform: translateY(-20px);
+    animation: slideFadeIn 0.4s ease forwards;
 }
 
 .mobileNavOpen a {
-    opacity: 1;
+    opacity: 0.8;
     transform: translateY(0);
 }
 
@@ -239,7 +255,7 @@
 
 @media (max-width: 972px) {
     .navbar {
-        padding: 15px 40px;
+        padding: 15px 30px;
     }
 
     .leftSection {
